2014-08-03 03:49-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Updated README and Tools/pcpg/README.

2014-03-25 03:49-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* PBXProject.m: Change to debug settings

2013-09-21 08:17-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* PBXFileReference.m: Add all subdirectories in the project
	to the include directives.

2013-09-21 02:06-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* PBXFileReference.m: Use gnu99 as default.  Need to start thinking
	about a specs file which will allow definition of defaults on
	a per compiler/platform basis.

2013-08-31  Fred Kiefer <FredKiefer@gmx.de>

	* PBXCoder.h,
	* PBXCoder.m: Remove method -changeToProjectRoot.
	* GSXCBuildContext.m: Remove directory change from pop.
	* PBXContainerItemProxy.m: Handle all directory changes here.
	* PBXFileReference.m: Add std to the compile options.
	* PBXFrameworksBuildPhase.m: Add frameworks in OTHER_LDFLAGS to
	the link options.

2013-05-09 12:56-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* PBXApplicationTarget.m: Set the product type in init.
	* PBXBundleTarget.m: Set the product type in init.
	* PBXCommon.h: Add GSXCCommon.h to the header.
	* PBXFrameworkTarget.m: Set the product type in init.

2013-05-09 12:44-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* PBXApplicationTarget.h
	* PBXApplicationTarget.m
	* PBXBundleTarget.h
	* PBXBundleTarget.m
	* PBXFrameworkTarget.h
	* PBXFrameworkTarget.m: Add new classes to handle older files for
	these targets.

2013-05-09 12:44-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GNUmakefile
	* PBXNativeTarget.h
	* PBXNativeTarget.m: Add new method.

2013-05-07 19:58-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* PBXFrameworksBuildPhase.m: Use the gnustep-config script
	everywhere to allow us to automatically use the default
	compiler.
	* Tools/pcpg/PLCPG.m: Fix an issue where mutable dictionary
	was not used.
