@@ -1,3 +1,10 @@
+2016-04-26 19:45-EDT Gregory John Casamento <greg.casamento@gmail.com>
+
+	* PBXFrameworksBuildPhase.m: Use gnustep-config to get the
+	paths for GNUSTEP_SYSTEM_LIBRARY, GNUSTEP_LOCAL_LIBRARY and
+	GNUSTEP_USER_LIBRARY after RFM's change to gnustep-make.
+	This change makes the build method a little more consistent.
+
 2014-08-03 03:49-EDT Gregory John Casamento <greg.casamento@gmail.com>
 
 	* Updated README and Tools/pcpg/README.
